--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ async function enviarDados(event) {
     msg.innerHTML = '<p class="loading-text">📡 Consultando modelo de IA...</p>';
 
     try {
-        const response = await fetch('http://192.168.1.17:5000/predict', {
+        const response = await fetch('https://uncompulsive-shelly-nonclerically.ngrok-free.dev/api/previsao/predict', {
             method: 'POST',
             headers: { 'Content-Type': 'application/json' },
             body: JSON.stringify(dados)
